my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/pr47237.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/pr47237.c:16:3: error: use of unknown builtin '__builtin_apply' [-Wimplicit-function-declaration]
   16 |   __builtin_apply(foo, __builtin_apply_args(), 16);
      |   ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/pr47237.c:16:24: error: use of unknown builtin '__builtin_apply_args' [-Wimplicit-function-declaration]
   16 |   __builtin_apply(foo, __builtin_apply_args(), 16);
      |                        ^
2 errors generated.
